# Mano-scriptai

01-ServiceNow-Incident-Automation/: CMakeLists.txt  README.md  config.json
01-ServiceNow-Incident-Automation/src/: main.cpp
03-ServiceNow-CMDB-Importer/: CMakeLists.txt  README.md
03-ServiceNow-CMDB-Importer/src/: main.cpp
05-ServiceNow-KB-Sync/: CMakeLists.txt  README.md
05-ServiceNow-KB-Sync/src/: main.cpp
07-ServiceNow-Major-Incident-WarRoom/: CMakeLists.txt  README.md
07-ServiceNow-Major-Incident-WarRoom/src/: main.cpp
08-ServiceNow-Service-Catalog-Sync/: CMakeLists.txt  README.md
08-ServiceNow-Service-Catalog-Sync/src/: main.cpp
09-ServiceNow-User-Provisioning/: CMakeLists.txt  README.md
09-ServiceNow-User-Provisioning/src/: http_client_stub.cpp  main.cpp
11-ServiceNow-Cost-Reporting/: CMakeLists.txt  README.md
11-ServiceNow-Cost-Reporting/include/: retry.hpp
11-ServiceNow-Cost-Reporting/src/: main.cpp
14-Jira-Release-Notes-Aggregator/: CMakeLists.txt  README.md
14-Jira-Release-Notes-Aggregator/src/: main.cpp
16-Jira-Epic-Burnup-Dashboard/: CMakeLists.txt  README.md
16-Jira-Epic-Burnup-Dashboard/src/: main.cpp
18-Jira-Issue-Transition-Worker/: CMakeLists.txt  README.md
18-Jira-Issue-Transition-Worker/src/: main.cpp
19-Jira-Webhook-Receiver/: CMakeLists.txt  README.md
19-Jira-Webhook-Receiver/include/: http_client_stub.hpp
19-Jira-Webhook-Receiver/src/: main.cpp
26-Grafana-Annotations-Writer/: CMakeLists.txt  README.md
26-Grafana-Annotations-Writer/include/: oauth_stub.hpp
26-Grafana-Annotations-Writer/src/: main.cpp  oauth_stub.cpp
26-Grafana-Annotations-Writer/tests/: test_main.cpp
27-Grafana-Alert-Rules-Sync/: CMakeLists.txt
40-SolarWinds-Perfstat-Collector/: CMakeLists.txt  README.md
40-SolarWinds-Perfstat-Collector/include/: metrics.hpp
40-SolarWinds-Perfstat-Collector/src/: main.cpp
42-SolarWinds-Custom-Poller-Manager/: CMakeLists.txt  README.md
42-SolarWinds-Custom-Poller-Manager/src/: main.cpp
45-SolarWinds-Maintenance-Window/: CMakeLists.txt  README.md
45-SolarWinds-Maintenance-Window/include/: logger.hpp
45-SolarWinds-Maintenance-Window/src/: main.cpp
48-SolarWinds-Event-Annotation-Sync/: CMakeLists.txt  README.md
48-SolarWinds-Event-Annotation-Sync/src/: main.cpp
